# _template_Application

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake_modules/: DownloadGit.cmake  GitModule.cmake  InstallRequiredLibraries.cmake
source/: CMakeLists.txt
source/App/: MyApplication.cpp
src/: CMakeLists.txt
src/App/: CMakeLists.txt  MyApplication.cpp
