
FIND_PACKAGE(SharedLib REQUIRED)

#MESSAGE(STATUS "SharedLib_INCLUDE_DIRS: " ${SharedLib_INCLUDE_DIRS})
#MESSAGE(STATUS "SharedLib_LIBRARIES: " ${SharedLib_LIBRARIES})
MESSAGE(STATUS "SharedLib_LOCATION: " ${SharedLib_LOCATION})
MESSAGE(STATUS "SharedLib_DIR: " ${SharedLib_DIR})

ADD_SUBDIRECTORY(App)

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)

ADD_EXECUTABLE(app
  ${app_src}
  ${app_hdr}
)

TARGET_LINK_LIBRARIES(app PUBLIC 
	SharedLib
	Qt5::WinMain # dulezity pro main() funkci
)

IF(WIN32)
	IF( ${CMAKE_CONFIGURATION_TYPES} STREQUAL "Release" )
		SET_TARGET_PROPERTIES( app PROPERTIES WIN32_EXECUTABLE TRUE )
	ENDIF()
ENDIF(WIN32)

MESSAGE(STATUS "SharedLib_INSTALL_DIR: " ${SharedLib_INSTALL_DIR} )

INSTALL(TARGETS app RUNTIME DESTINATION install)

INSTALL(FILES ${SharedLib_LOCATION} DESTINATION install)

INCLUDE(InstallRequiredLibraries)
InstallRequiredLibraries(install)